oxiplate-derive/tests/broken/derive/inline-failed-expand.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/inline-failed-expand.rs:4:30
  |
4 | #[oxiplate_inline(include_str!("/path/that/does/not/exist"))]
  |                              ^

error: expected `:`
 --> tests/broken/derive/inline-failed-expand.rs:4:30
  |
4 | #[oxiplate_inline(include_str!("/path/that/does/not/exist"))]
  |                              ^
